--- a/budget_app/public/budget_app.css
+++ b/budget_app/public/budget_app.css
@@ -1,8 +1,33 @@
 body {
+  color: #4d4d4d;
   font-family: monospace;
   margin: 20px;
 }
 
 a {
   text-decoration: none;
+}
+
+h1 {
+  font-size: 45px;
+}
+
+h2 {
+  font-size: 35px;
+}
+
+h3 {
+  font-size: 25px;
+}
+
+h4 {
+  font-size: 15px;
+}
+
+table, th {
+  padding: 10px;
+}
+
+td {
+  padding: 1px 5px 1px 15px;
 }
