--- a/budget_app/views/layout.erb
+++ b/budget_app/views/layout.erb
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/budget_app.css" charset="utf-8">
   </head>
   <body>
+    <h1><a href="/">Monthly Budget</a></h1>
     <% if session[:error] %>
         <p><%= session.delete(:error) %></p>
     <% end %>
