--- a/class_loto/views/classrooms.erb
+++ b/class_loto/views/classrooms.erb
@@ -7,7 +7,7 @@
       </tr>
       <% @classrooms.each do |classroom| %>
       <tr>
-        <td><a href="/classroom/<%= classroom[:class_id] %>/edit"><button>edit</button></td>
+        <td><button><a href="/classroom/<%= classroom[:class_id] %>/edit">edit</a></button></td>
         <td><form action="/classroom/<%= classroom[:class_id] %>/destroy" method="post"><button type="submit">del</button></form></td>
         <td><a href="/classroom/<%= classroom[:class_id] %>"><%= classroom[:classroom_name] %></a></td>
       </tr>
@@ -15,4 +15,4 @@
     </table>
 <% end %>
 
-<h2><a href="/classroom/new">add</a></h2>
+<a class="plus" href="/classroom/new"> + </a>
