--- a/class_loto/public/class_loto.css
+++ b/class_loto/public/class_loto.css
@@ -1,4 +1,47 @@
 body {
+  color: #4d4d4d;
   font-family: monospace;
   padding: 20px;
+}
+
+a {
+  text-decoration: none;
+}
+
+th {
+  display: none;
+}
+
+table, td {
+  font-size: 30px;
+  padding: 8px;
+}
+
+button {
+  font-size: 20px;
+  background-color: white;
+  border-style: solid;
+  border-color: #4d4d4d;
+  border-radius: 10px;
+}
+
+h1 {
+  font-size: 45px;
+}
+
+h2 {
+  font-size: 35px;
+}
+
+h3 {
+  font-size: 35px;
+}
+
+h4 {
+  font-size: 25px;
+}
+
+.plus {
+  font-size: 50px;
+  padding-left: 20px;
 }
