--- a/subclass_lotto/public/subclass_lotto.css
+++ b/subclass_lotto/public/subclass_lotto.css
@@ -2,6 +2,7 @@ body {
   color: #4d4d4d;
   font-family: monospace;
   padding: 20px;
+  margin: 0;
 }
 
 a {
@@ -38,13 +39,18 @@ h3 {
 }
 
 h4 {
-  font-size: 25px;
+  font-size: 22px;
+  margin: 2px;
+}
+
+.plus {
+  font-size: 50px;
+  padding-left: 20px;
 }
 
 input {
   margin: 10px;
-  font-size: 20px;
-  padding: 10px;
+  font-size: 20px
 }
 
 textarea {
@@ -52,7 +58,18 @@ textarea {
   font-size: 20px
 }
 
-.plus {
-  font-size: 50px;
-  padding-left: 20px;
+form, textarea, input {
+  padding: 8px;
+}
+
+.fourth {
+  height: 200px;
+  width: calc(100% / 4.5);
+  display: inline-block;
+}
+
+.move_name {
+  margin: 4px;
+  font-size: 4px
+  padding: 4px;
 }
