--- a/subclass_lotto/views/classroom.erb
+++ b/subclass_lotto/views/classroom.erb
@@ -2,14 +2,18 @@
 
 <div>
   <div class="fourth">
-    <% @classroom[:student_names_col1].each do |name|  %>
-      <h4><%= name[0].to_s + " " %><%= name[1] %></h4>
+    <% @classroom[:student_names].each do |name|  %>
+      <% if name[2] == 1 %>
+        <h4><%= name[0].to_s + " " %><%= name[1] %></h4>
+      <% end %>
     <% end %>
     <h4 id="red_name">red names</h4>
   </div>
   <div class="fourth">
-    <% @classroom[:student_names_col2].each do |name|  %>
-      <h4><%= name[0].to_s + " " %><%= name[1] %></h4>
+    <% @classroom[:student_names].each do |name|  %>
+      <% if name[2] == 2 %>
+        <h4><%= name[0].to_s + " " %><%= name[1] %></h4>
+      <% end %>
     <% end %>
     <form class="move_name" action="/classroom/<%= @classroom[:class_id] %>/move_name" method="post">
       <input name="move_name">
@@ -18,8 +22,10 @@
     </form>
   </div>
   <div class="fourth">
-    <% @classroom[:student_names_col3].each do |name|  %>
-      <h4><%= name[0].to_s + " " %><%= name[1] %></h4>
+    <% @classroom[:student_names].each do |name|  %>
+      <% if name[2] == 3 %>
+        <h4><%= name[0].to_s + " " %><%= name[1] %></h4>
+      <% end %>
     <% end %>
     <h4 id="green_name">green names</h4>
   </div>
